Fixed CSS alignment and image path

--- a/avengers/captain-america/america.css
+++ b/avengers/captain-america/america.css
@@ -116,6 +116,10 @@ b {
   background-color: #000;
 }
 
+.avenger-facts-container {
+  margin-top: 20px;
+}
+
 .stat-img {
   width: 100%;
 }
