--- a/avengers/ironman/ironman.css
+++ b/avengers/ironman/ironman.css
@@ -131,7 +131,7 @@ b {
   color: #fff;
   max-width: 70%;
   padding: 20px 50px;
-  line-height: 2.2;
+  line-height: 1.8;
   font-size: 20px;
 }
 
