--- a/avengers/thor/thor.css
+++ b/avengers/thor/thor.css
@@ -118,7 +118,7 @@ b {
 
 .description {
   padding: 20px 50px;
-  line-height: 2.2;
+  line-height: 1.5;
   font-size: 20px;
   text-align: justify;
 }
